--- a/app/flaskr/templates/index.html
+++ b/app/flaskr/templates/index.html
@@ -7,6 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body style="height: 100vh;">
+    <div class="w-100 h-100 d-flex justify-content-center align-items-center">
+      <div style="display: block;" id="tic-tac-toe-board">
+          <div class="w-100 justify-content-between my-3" style="display: flex;">
+            <button class="btn btn-danger">End game</button>
+            <button class="btn btn-primary"> Play again</button>
+          </div>
+          <h2><span id="title">Credits:&nbsp</span><span id="credits"></span></h2>
+          <div class="row gap-2">
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="0-0">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="0-1">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="0-2">&nbsp;</div>
+          </div>
+          <div class="row gap-2 my-2">
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="1-0">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="1-1">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-2">&nbsp;</div>
+          </div>
+          <div class="row gap-2">
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-0">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-1">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-2">&nbsp;</div>
+          </div>
+      </div>
+      <div class="flex-column gap-2" id="starter-page" style="display: none;">
+        <button class="btn btn-secondary rounded border-1 px-5 py-2" id="start-game">
+            Start game
+        </button>
+        <div class="btn-group">
+            <button id="statistics-button" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Today statistics
+            </button>
+            <ul class="dropdown-menu" id="statistics-menu">
+              <li class="dropdown-item">There is no data for today</li>
+            </ul>
+        </div>
+    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
