--- a/app/flaskr/templates/index.html
+++ b/app/flaskr/templates/index.html
@@ -8,8 +8,8 @@
   </head>
   <body style="height: 100vh;">
     <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-      <div style="display: block;" id="tic-tac-toe-board">
-          <div class="w-100 justify-content-between my-3" style="display: flex;">
+      <div style="display: none;" id="tic-tac-toe-board">
+          <div class="w-100 justify-content-between my-3" style="display: none;">
             <button class="btn btn-danger">End game</button>
             <button class="btn btn-primary"> Play again</button>
           </div>
@@ -30,7 +30,7 @@
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-2">&nbsp;</div>
           </div>
       </div>
-      <div class="flex-column gap-2" id="starter-page" style="display: none;">
+      <div class="flex-column gap-2" id="starter-page" style="display: flex;">
         <button class="btn btn-secondary rounded border-1 px-5 py-2" id="start-game">
             Start game
         </button>
@@ -54,6 +54,21 @@
 
         socket.on('connect', function() {
             console.log('Connected to the server');
+        });
+
+        $('#start-game').click(function() {
+            socket.emit('start_game')
+        })
+
+        socket.on('load_game', function(data){
+            $('#starter-page').hide()
+            $('#tic-tac-toe-board').show()
+            $('#credits').text(data.credits)
+
+        })
+
+        $('.badge').on('click', function() {
+            console.log('clicked');
         });
 
         window.addEventListener("beforeunload", function (e) {
