--- a/app/flaskr/templates/index.html
+++ b/app/flaskr/templates/index.html
@@ -9,11 +9,12 @@
   <body style="height: 100vh;">
     <div class="w-100 h-100 d-flex justify-content-center align-items-center">
       <div style="display: none;" id="tic-tac-toe-board">
-          <div class="w-100 justify-content-between my-3" style="display: none;">
+          <div class="w-100 justify-content-between my-3" style="display: none;" id="game-action-buttons">
             <button class="btn btn-danger">End game</button>
             <button class="btn btn-primary"> Play again</button>
           </div>
-          <h2><span id="title">Credits:&nbsp</span><span id="credits"></span></h2>
+		  <h1 id="title"></h1>
+          <h2><span>Credits:&nbsp</span><span id="credits"></span></h2>
           <div class="row gap-2">
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="0-0">&nbsp;</div>
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="0-1">&nbsp;</div>
@@ -22,7 +23,7 @@
           <div class="row gap-2 my-2">
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="1-0">&nbsp;</div>
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="1-1">&nbsp;</div>
-              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-2">&nbsp;</div>
+              <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="1-2">&nbsp;</div>
           </div>
           <div class="row gap-2">
               <div class="col badge bg-secondary d-flex align-items-center justify-content-center fs-2" style="min-width: 100px; min-height: 100px; cursor: pointer;" id="2-0">&nbsp;</div>
@@ -68,8 +69,37 @@
         })
 
         $('.badge').on('click', function() {
-            console.log('clicked');
+          if (!$(this).hasClass('disabled')) {
+            $(this).text('X')
+            socket.emit('move', {position: $(this).attr('id')})
+            $('.badge').addClass('disabled');
+          }
         });
+
+        socket.on('computer_move', function(data) {
+          $(`#${data.position}`).text('O')
+
+          $('.badge').each(function() {
+            var text = $(this).text();
+            if (text !== "X" && text !== "O") {
+              $(this).removeClass('disabled');
+            }
+          });
+        })
+
+		socket.on('game_over', function(data) {
+			$('#game-action-buttons').show()
+			$('.badge').addClass('disabled');
+
+			if (data.winner === 'X') {
+				$('#title').text('You won!')
+			} else if (data.winner === 'O') {
+				$('#title').text('You lost!')
+			} else if (data.draw){
+				$('#title').text('Draw!')
+			}
+		})
+
 
         window.addEventListener("beforeunload", function (e) {
             e.preventDefault();
